public/stylesheets/style.css
@import url(normalize.css);

@font-face {
    font-family: Cookie;
    src: url(/Cookie-Regular.ttf) format("truetype");
    font-weight: normal;
}

body {
    font-family: Helvetica;

    height: 100vh;
}
header {
    background-color: #ffffff;
    position: relative;
    z-index: 100;
    box-shadow: 0px 0px 3px #808080;
    text-align: center;
}


nav {
    font-weight: bold;
    font-family: Cookie;
    height: 3.5rem;
    line-height: 3.5rem;
    vertical-align: middle;
    font-size: 1.6rem;
    letter-spacing: 5px;
    color: #212121;
}

main {
    position: fixed;
    width: 100vw;
    top: 3.5rem;
    left: 0px;
    height: calc(100vh - 3.5rem);
    z-index: 100;
}

.img-container {
    /* background-color: #1A9AD9; */
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    /* background-color: #D851E6; */

}

.img-camera {
    display: block;
    position: absolute;
    cursor: pointer;

    width: 50vmin;

    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    border: 10px solid #FFFFFF;
    border-radius: 30px;
    padding: 30px;
}


.hide {
    display: none;
}

html {
    background: linear-gradient(to bottom right, #8EF378, #1CBBB4);
}


.floating-button {
    font-family: "Times New Roman";
    position: fixed;
    font-size: 30px;
    right: 30px;
    bottom: 20px;
    line-height: 40px;
    vertical-align: middle;
    text-align: center;
    color: white;
    background: linear-gradient(to bottom right, #FFDBD5, #FE69BD);
    background-repeat: no-repeat;
    height: 40px;
    width: 40px;
    border-radius: 99999px;
    padding: 10px;
    z-index: 110;
    box-shadow: 0px 10px 30px rgba(61, 61, 61, 0.38);
    transform: scale(1);
    cursor: pointer;
    transition: all 0.25s cubic-bezier(0.8, 0.83, 0.65, 1.06);
    user-select: none;
}

.pressed {
    transform: scale(0.5);
}

.floating-modal {
    /* display: none; */
    width: 30%;
    display: inline-block;
    position: fixed;
    top: 50%;
    left: -100%;
    transform: translate(-50%, -50%);
    background-color: white;
    padding: 50px;
    line-height: 1.5;
    border-radius: 10px;
    z-index: 100;
    /* opacity: 0; */
    transition: all 0.5s ease-in-out;
    /* font-size: 13px; */
    box-sizing: border-box;
    box-shadow: 0px 10px 30px rgba(61, 61, 61, 0.38);
}

.appear {
    /* display: inline-block; */
    opacity: 1;
    /* z-index: 90; */
    top: 50%;
    left: 50%;
}


.progress-layer {
    display: none;
    opacity: 0;

    color: white;
    background-color: rgba(0, 0, 0, 0.39);
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: 120;
    text-align: center;
    transition: all 1s linear;
}

.progress-bar {
    font-family: Cookie;
    font-size: 1.5rem;
    box-sizing: border-box;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #525252;
    display: inline-block;
    padding: 10px 30px;
    border-radius: 10px;
    transition: all 1s linear;
    box-shadow: 0px 10px 30px rgba(61, 61, 61, 0.38);
}

.progress-bar .loader {
    content: '';
    position: absolute;
    border-radius: 10px;
    z-index: -10;
    left: 0px;
    top: 0px;
    height: 100%;
    width: 0%;
    background: linear-gradient(to bottom right, #FFDBD5, #FE69BD);
    transition: all 0.3s linear;
}

.bold {
    font-weight: bold;
}

.github {
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    transform: rotate(45deg) translate(-50px, 80px);
    background-color: black;
    padding: 10px 100px 30px 100px;
    text-align: center;
}

.github img {
    vertical-align: middle;
    transition: all 1s;
    height: 5vmax;
}


@media only screen and (max-width: 950px) {
    .floating-modal {
        width: 90%;
        padding: 30px;
    }
}

